# dark-matter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEP-AUDIT.md  FINAL-REPORT.md  LICENSE  Makefile  README.md  ROADMAP.md  VIBE-CODERS-GUIDE.md  agent-handoff-template.md  ai-constitution.md  daily-checklist.md  decision-framework.md  engineering-memory.md  failure-database.md  feature-registry.md  knowledge-graph.md  model-replacement-test.md  monthly-checklist.md  post-release-checklist.md  pre-release-checklist.md  pyproject.toml  repository-dna.md  risk-register.md  verification-engine.md  weekly-checklist.md  workflow-map.md
.github/: PULL_REQUEST_TEMPLATE.md
input/: README.md  package.json
intelligence/: api-catalog.md  architecture.md  business-rules.md  database-catalog.md  decision-log.md  domain-knowledge.md  feature-catalog.md  known-bugs.md  known-failures.md  project-overview.md  technical-debt.md  workflow-map.md
project-brain/: api-reference.md  architecture.md  business-rules.md  coding-standards.md  database.md  decisions.md  dependencies.md  deployment.md  glossary.md  known-issues.md  project-overview.md  roadmap.md  security-notes.md  technical-debt.md  ui-system.md  workflows.md
prompts/: architecture-review.prompt  bug-hunting.prompt  database-review.prompt  dependency-audit.prompt  documentation-audit.prompt  full-audit.prompt  performance-audit.prompt  qa-audit.prompt  release-readiness.prompt  security-audit.prompt  technical-debt.prompt  workflow-verification.prompt
rfcs/: 0001-node-identity.md  (+4 more)
(+76 files in other folders)
