[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dark-matter"
version = "0.1.0"
description = "AI-native repository intelligence platform. Converts codebases into verifiable, versioned knowledge graphs."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
dm = "dm.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
